fix overall style

--- a/app/assets/stylesheets/giveaways.scss
+++ b/app/assets/stylesheets/giveaways.scss
@@ -1,4 +1,5 @@
 .main-content.giveaways.select_location {
   background-image: url('https://tradiiosongs.s3-eu-west-1.amazonaws.com/1/5/3/8/8/15388/superb-road-wallpaper.jpg');
+  background-position: 0;
   color: #fff;
 }
