--- a/app/views/giveaways/select_location.html.erb
+++ b/app/views/giveaways/select_location.html.erb
@@ -12,7 +12,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, 'Save location', class: 'btn btn-primary' %>
+          <%= f.button :submit, 'Save location', class: 'btn-inverse' %>
         </div>
       <% end %>
     </div>
