--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
       <h3><%= t(".title_1") %></h3>
       <h3><%= t(".title_2") %></h3>
       <p><%= t(".message") %></p>
-      <%= link_to t(".btn_action"), giveaways_path, class: "btn" %>
+      <%= link_to t(".btn_action"), giveaways_path, class: "btn btn-inverse" %>
     </div>
   </div>
   <p class="description">
@@ -18,7 +18,7 @@
     <div class="content col-xs-12 col-sm-12 col-md-6 col-lg-6">
       <h3><%= t(".overview.title") %></h3>
       <p><%= t(".overview.message") %></p>
-      <%= link_to t(".overview.btn_action"), posts_path, class: "btn btn-block" %>
+      <%= link_to t(".overview.btn_action"), posts_path, class: "btn btn-block btn-inverse" %>
     </div>
   </div>
 </section>
@@ -28,7 +28,7 @@
     <div class="content col-xs-12 col-sm-12 col-md-6 col-lg-6">
       <h3><%= t(".campaign.title") %></h3>
       <p><%= t(".campaign.message") %></p>
-      <%= link_to t(".campaign.btn_action"), campaigns_path, class: "btn btn-block" %>
+      <%= link_to t(".campaign.btn_action"), campaigns_path, class: "btn btn-block btn-inverse" %>
     </div>
     <%= image_tag "campaign.jpg", class: "col-xs-12 col-sm-12 col-md-6 col-lg-6" %>
   </div>
