add location background

--- a/app/assets/stylesheets/giveaways.scss
+++ b/app/assets/stylesheets/giveaways.scss
@@ -1,5 +1,8 @@
 .main-content.giveaways.select_location {
-  background-image: url('https://tradiiosongs.s3-eu-west-1.amazonaws.com/1/5/3/8/8/15388/superb-road-wallpaper.jpg');
+  background-image: url('location.png');
   background-position: 0;
+  background-color: rgba(0,0,0, 0.8);
+  background-size: 100%;
   color: #fff;
+  padding-top: 24px;
 }
