--- a/app/views/giveaways/select_campaign.html.erb
+++ b/app/views/giveaways/select_campaign.html.erb
@@ -1,19 +1,19 @@
-<div class="container">
-  <h2 class="section-header">Have a look at these campaigns</h2>
-  <div class="row">
-    <div class="col-lg-6">
-      <p>
-        Joining a campaign is a great way to bring your stuff to people in need in distance area.
-      </p>
-      <p>
-        Alternative you can post your stuff.
-        <%= link_to 'Create a new post', new_post_path, class: 'btn btn-info-outline btn-sm' %>
-      </p>
-    </div>
-    <div class="col-lg-3">
-
-    </div>
+<div class="row split-layout" style="background-color: <%= @category.color %>;">
+  <div class="content col-lg-7">
+    <h2 class="m-b-1">Have a look at these campaigns</h2>
+    <p>
+      Joining a campaign is a great way to bring your stuff to people in need in distance area.
+    </p>
+    <p>
+      Alternative you can post your stuff.
+    </p>
+    <%= link_to 'Create a new post', new_post_path, class: 'btn btn-inverse btn-sm' %>
   </div>
+  <%= image_tag @category.img_url, class: "col-lg-5", onerror: "this.src='#{image_path('home_bg.jpg')}'" %>
+  <div class="col-lg-3">
 
+  </div>
+</div>
+<div class="container">
   <%= render 'campaigns/campaigns' %>
 </div>
