--- a/app/views/giveaways/select_campaign.html.erb
+++ b/app/views/giveaways/select_campaign.html.erb
@@ -7,13 +7,10 @@
     <p>
       Alternative you can post your stuff.
     </p>
-    <%= link_to 'Create a new post', new_post_path, class: 'btn btn-inverse btn-sm' %>
+    <%= link_to 'Create a new post', new_post_path({category: params[:category]}), class: 'btn btn-inverse btn-sm' %>
   </div>
   <%= image_tag @category.img_url, class: "col-lg-5", onerror: "this.src='#{image_path('home_bg.jpg')}'" %>
-  <div class="col-lg-3">
-
-  </div>
 </div>
-<div class="container">
+<div class="container m-t-2">
   <%= render 'campaigns/campaigns' %>
 </div>
