--- a/app/views/giveaways/_category.html.erb
+++ b/app/views/giveaways/_category.html.erb
@@ -1,6 +1,6 @@
 <%= link_to select_campaign_giveaways_path({category: category}) do %>
   <div class="category_block pull-left" style="display: none; background-color: <%= category.color %>;">
     <i class="fa <%= category.fa_icon %>">&#xfeff;</i>
-    <div class="text"><%= category.name %></div>
+    <div class="text"><%= category.display_name %></div>
   </div>
 <% end %>
