--- a/app/views/me/campaigns/new.html.erb
+++ b/app/views/me/campaigns/new.html.erb
@@ -10,6 +10,7 @@
     <%= f.input :description, as: :text, :input_html => { :rows => 10 } %>
     <%= f.input :donation_instruction, as: :text, :input_html => { :rows => 4 } %>
     <%= f.input :gmap_location, as: :text %>
+    <%= f.input :categories, collection: Category.all, label_method: :display_name , input_html: { multiple: true, class: 'form-control chosen-it' } %>
   </div>
 
   <div class="form-actions">
