--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h2 class="section-header">Create new post</h2>
+      <h2 class="section-header"><%= I18n.t 'posts.form.header' %></h2>
       <%= render 'form' %>
     </div>
   </div>
