--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.input :title, label: false, placeholder: t(".title") %>
     <%= f.input :description, label: false, as: :text, placeholder: t(".description"), :input_html => { :rows => 10 }  %>
-    <%= f.input :location, label: t(".location"), collection: ["Hồ Chí Minh", "Hà Nội"], input_html: { value: @location }  %>
+    <%= f.input :location, label: t(".location"), collection: location_options, input_html: { value: @location }  %>
     <%= f.input :category, collection: @categories, label_method: :display_name, label: t(".category"), selected: params[:category], include_blank: true, placeholder: t(".location") %>
     <%= f.input :main_image, as: :file, class: 'form-control fileinput-button', label: t(".main_image") %>
   </div>
