--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -69,4 +69,14 @@
       list-style: none;
     }
   }
+
+  #search-box {
+    width: 100%;
+    height: 53px;
+    background-image: none;
+    background-color: transparent;
+    border-color: #f0ad4e;
+  }
+
 }
+
