--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
   <p id="notice"><%= notice %></p>
 
   <!-- location selection -->
-  <section class="alert alert-success location-alert">
+  <section class="alert alert-success location-alert" style="display: none">
     <span>
       <span><%= t(".suggest_location_message_1") %></span>
       <span class="city label label-success"></span>
@@ -15,7 +15,7 @@
     </div>
   </section>
 
-  <section class="alert alert-success location-select">
+  <section class="alert alert-success location-select" style="display: none">
     <p><%= t(".location_selection_message") %></p>
     <%= select "location", "location", LOCATION_LIST.each.map {|location| I18n.locale == :vi ? [location[:displayName], location[:id]] : [location[:displayNameEN], location[:id]]} %>
     <div class="btn-container">
@@ -24,6 +24,10 @@
     </div>
   </section>
 
+  <section class="alert alert-success location-loading" style="display: none">
+    <p><%= t(".location_loading_message") %></p>
+  </section>
+  
   <!-- searching -->
   <!-- <div class="row search-container">
       <form class="form-search form-inline col-xs-11 col-md-11 col-lg-11">
