--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container p-b-3">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h2 class="section-header"><%= I18n.t 'posts.form.header' %></h2>
