--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -36,33 +36,29 @@
       <button class="btn btn-warning-outline col-xs-1 col-md-1 col-lg-1 search-btn"><%= fa_icon "search" %></button>
   </div>
 
-<!-- searching -->
-<!-- <div class="search-container">
-  <%= form_tag('/posts/search', method: :get, class: "form-search form-inline row") do %>
-    <%= text_field_tag :keyword, nil, class: "form-control warning-outline col-xs-11 col-md-11 col-lg-11", id: "search-box" %>
-    <input name="city" type="hidden" value="">
-    <button type="submit" class="btn btn-warning-outline col-xs-1 col-md-1 col-lg-1 search-btn"><%= fa_icon "search" %></button>
-  <% end %>
-</div> -->
-
 <div class="row post-content">
   <div class="col-md-2"> 
     
-    <ul class="category-list">
-    <%= form_tag('/posts', method: :get) do %>
-      <%= label_tag I18n.t('posts.form.location') %>
-      <%= select_tag :location_id, options_for_select(location_options) %>
+    <div>
+      <h6><%= I18n.t('posts.form.location') %></h6>
+      <%= select_tag :location_id, options_for_select(location_options, current_location) %>
+    </div>
+    
+    <hr/>
+    <div>
+      <ul class="category-list" style="padding: 0">
+        <h6><%= I18n.t('posts.form.category') %></h6>
 
-      <hr/>
-      <%= label_tag I18n.t('posts.form.category') %>
-      <% Category.all.each do |c| %>
-        <li>
-          <%= check_box_tag c.display_name %>
-          <%= label_tag c.display_name %>
-        </li>
-      <% end %>
-    <% end %>
-    </ul>
+        <% Category.all.each do |c| %>
+          <li>
+            <%= link_to search_posts_path({category: c.id, city: current_location}) do %>
+              <i class="fa <%= c.fa_icon %>">&#xfeff;</i>
+              <span class="text"><%= c.display_name %></span>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
 
   </div>
 
