--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,31 +1,47 @@
 <div class="container-fluid no-pad detail-page">
-  <div class="row no-pad">
-    <div class="col-md-3 sidebar">
-      <h4 class="location">
-        <%= fa_icon "map-marker" %>
-        <%= location_name(@post.location) %>
-      </h4>
-      <div class="clearfix"></div>
-      <a href="#">
-        <button class="btn btn-lg btn-block btn-primary"> <%= t(".request_now") %> </button>
-      </a>  
-      <a href="#">
-        <button class="btn btn-lg btn-block btn-info"> <%= t(".send_message") %> </button>
-      </a> 
-      <div class="item-list">
-      </div>
+  <div class="row">
+
+    <div class="col-md-4 col-md-offset-1">
+      <%= image_tag @post.main_image_url, class: "img-responsive", style: 'width: 100%' %>
     </div>
-    <div class="col-md-9 content">
-      <div class="hero-img hidden-sm-down" style="background-image: url(<%= @post.main_image_url %>)"><!-- url(@post.main_image.url) --></div>
-      <div class="container">
+
+    <div class="col-md-3">
+      <div>
         <h3><%= @post.title %></h3>
+        <h6 class="location">
+          <%= fa_icon "map-marker" %>
+          <%= location_name(@post.location) %>
+        </h6>
+
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
         <div class="addthis_sharing_toolbox"></div>
 
         <div class="extended-description">
           <%= @post.description %>
         </div>
-      </div>  
+      </div>
     </div>
+
+    <div class="col-md-3">
+      <%= form_tag(request_post_path(@post), method: 'post') %>
+        <fieldset class="form-group">
+          <input type="text" class="form-control" name="request[name]" placeholder="Tên của bạn">
+        </fieldset>
+        <fieldset class="form-group">
+          <input type="text" class="form-control" name="request[email_or_phone]" placeholder="Email / số điện thoại">
+        </fieldset>
+        <fieldset class="form-group">
+          <input type="text" class="form-control" name="request[address]" placeholder="Địa chỉ">
+        </fieldset>
+        <fieldset class="form-group">
+          <textarea class="form-control" name="request[message]" rows="3" placeholder="Nội dung nhắn"></textarea>
+        </fieldset>
+        <button type="submit" class="btn btn-lg btn-block btn-primary">
+          <%= t(".request_now") %>
+        </button>
+      </form>
+
+    </div>
+
   </div>
 </div>
