--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div class="col-md-3">
-      <%= form_tag(request_post_path(@post), method: 'post') %>
+      <%= form_tag(request_post_post_path(@post), method: 'post') %>
         <fieldset class="form-group">
           <input type="text" class="form-control" name="request[name]" placeholder="Tên của bạn">
         </fieldset>
