--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -109,5 +109,29 @@
     height: initial;
   }
 
+  .btn-category {
+    position: relative;
+    width: 100px;
+    text-align: left;
+    padding-left: 0px;
+
+    i.fa {
+      text-align: center;
+      width: 20px;
+      margin-right: 2px;
+    }
+
+
+    &:hover,
+    &.active {
+      border-left: solid 3px $primary_color;
+      color: $primary_color;
+
+      i.fa {
+        padding-left: 5px;
+      }
+    }
+  }
+
 }
 
