--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -51,7 +51,7 @@
 
         <% Category.all.each do |c| %>
           <li>
-            <%= link_to search_posts_path({category: c.id, city: current_location}), class: 'btn btn-outline btn-sm btn-category' do %>
+            <%= active_link_to search_posts_path({category: c.id, city: current_location}), active: /\/posts\/search\?.*category=#{c.id}/, class: 'btn btn-outline btn-sm btn-category' do %>
               <i class="fa <%= c.fa_icon %>"></i>
               <span class="text"><%= c.display_name %></span>
             <% end %>
