--- a/app/views/giveaways/select_campaign.html.erb
+++ b/app/views/giveaways/select_campaign.html.erb
@@ -1,16 +1,12 @@
 <div class="row split-layout" style="background-color: <%= @category.color %>;">
-  <div class="content col-lg-7">
-    <h2 class="m-b-1">Have a look at these campaigns</h2>
-    <p>
-      Joining a campaign is a great way to bring your stuff to people in need in distance area.
-    </p>
-    <p>
-      Alternative you can post your stuff.
-    </p>
-    <%= link_to 'Create a new post', new_post_path({category: params[:category]}), class: 'btn btn-inverse btn-sm' %>
+  <div class="content col-lg-6">
+    <h2 class="m-b-1"><%= t 'giveaway.join_campaign' %></h2>
+    <p><%= t 'giveaway.join_campaign_description' %></p>
+    <p><%= t 'giveaway.join_campaign_alternative' %></p>
+    <%= link_to t('giveaway.create_post'), new_post_path({category: params[:category]}), class: 'btn btn-inverse btn-sm' %>
   </div>
-  <%= image_tag @category.img_url, class: "col-lg-5", onerror: "this.src='#{image_path('home_bg.jpg')}'" %>
+  <%= image_tag @category.img_url, class: "col-lg-6", onerror: "this.src='#{image_path('home_bg.jpg')}'" %>
 </div>
-<div class="container m-t-2">
+<div class="container m-t-2 p-b-3">
   <%= render 'campaigns/campaigns' %>
 </div>
