--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,11 @@
-<div class="container-fluid no-pad detail-page">
+<div class="container detail-page p-b-3">
   <div class="row">
 
-    <div class="col-md-4 col-md-offset-1">
+    <div class="col-md-4">
       <%= image_tag @post.main_image_url, class: "img-responsive", style: 'width: 100%' %>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-5">
       <div>
         <h3><%= @post.title %></h3>
         <h6 class="location">
@@ -16,7 +16,7 @@
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
         <div class="addthis_sharing_toolbox"></div>
 
-        <div class="extended-description">
+        <div class="extended-description p-t-1">
           <%= @post.description %>
         </div>
       </div>
