--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container detail-page p-b-3">
   <div class="row">
 
-    <div class="col-md-4">
-      <%= image_tag @post.main_image_url, class: "img-responsive", style: 'width: 100%' %>
+    <div class="col-lg-4 col-lg-push-0 col-md-6 col-md-push-6">
+      <%= image_tag @post.main_image_url, class: "img-responsive m-b-1", style: 'width: 100%' %>
     </div>
 
-    <div class="col-md-5">
+    <div class="col-lg-5 col-lg-pull-0 col-md-6 col-md-pull-6">
       <div>
         <h3><%= @post.title %></h3>
         <h6 class="location">
@@ -16,13 +16,13 @@
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
         <div class="addthis_sharing_toolbox"></div>
 
-        <div class="extended-description p-t-1">
+        <div class="extended-description p-t-1 p-b-1">
           <%= @post.description %>
         </div>
       </div>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-lg-3 col-lg-offset-0 col-md-6">
       <%= form_tag(request_post_post_path(@post), method: 'post') %>
         <fieldset class="form-group">
           <input type="text" class="form-control" name="request[name]" placeholder="Tên của bạn">
