--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,7 +8,7 @@
     <%= f.input :avatar_url %>
     <%= f.input :description %>
     <%= f.input :contact_address %>
-    <%= f.input :contact_city %>
+    <%= f.input :contact_city, collection: location_options, input_html: { class: 'chosen-single-deselect'} %>
   </div>
 
   <div class="form-actions">
