--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -63,7 +63,15 @@
   </div>
 
   <div class="col-md-9">
+    <div class="row">
+      <div class="digg_pagination">
+        <%= will_paginate @posts %>
+      </div>
+    </div>
+
+    <div class="row">
     <% @posts.each do |post| %>
+
       <div class="col-md-4">
         <div class="card">
           <%= link_to (image_tag post.main_image_url), post %>
@@ -76,5 +84,6 @@
         </div>
       </div>
     <% end %>
+    </div>
   </div>
 </div>
