--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -29,7 +29,7 @@
     }
   }
 
-  .location-alert, .location-select, .location-loading {
+  .location-alert, .location-select {
     font-size: 16px;
     width: 100%;
 
