--- a/app/assets/stylesheets/bootstrap-fix.scss
+++ b/app/assets/stylesheets/bootstrap-fix.scss
@@ -62,3 +62,20 @@
     padding-left: 5%;
   }
 }
+
+ul.pagination {
+  @extend .pagination-sm;
+
+  li {
+    @extend .page-item;
+
+    a {
+      @extend .page-link;
+    }
+  }
+}
+
+.pagination {
+  margin-top: 0;
+  margin-bottom: 0;
+}
