--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -63,13 +63,9 @@
   </div>
 
   <div class="col-md-9">
-    <div class="row">
-      <div class="digg_pagination">
-        <%= will_paginate @posts %>
-      </div>
-    </div>
+    <%= will_paginate @posts, class: 'pull-right' %>
 
-    <div class="row">
+    <div class="row p-t-3">
     <% @posts.each do |post| %>
 
       <div class="col-md-4">
