--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -59,9 +59,9 @@
   </div>
 
   <div class="col-md-9">
-    <%= will_paginate @posts, class: 'pull-right' %>
+    <%= will_paginate @posts, class: 'top-pagination pull-right' %>
 
-    <div class="row p-t-3">
+    <div class="row">
     <% @posts.each do |post| %>
 
       <div class="col-md-4">
