--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -58,11 +58,11 @@
 
     #search_chosen {
       width: 100% !important;
-      background: none;
 
       .chosen-choices {
         width: 100%;
         border-radius: 4px;
+        background: none;
 
         .search-choice {
           background-color: rgba(240,173,78,0.15);
@@ -73,6 +73,7 @@
 
           .group-name {
             color: $primary_color;
+            opacity: 0.8;
           }
 
           .search-choice-close {
