--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-lg-4 col-lg-push-0 col-md-6 col-md-push-6">
-      <%= image_tag @post.main_image_url, class: "img-responsive m-b-1", style: 'width: 100%' %>
+      <%= image_tag @post.main_image.url, class: "img-responsive m-b-1", style: 'width: 100%' %>
     </div>
 
     <div class="col-lg-5 col-lg-pull-0 col-md-6 col-md-pull-6">
