--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -66,7 +66,7 @@
 
       <div class="col-md-4">
         <div class="card">
-          <%= link_to (image_tag post.main_image_url), post %>
+          <%= link_to (image_tag post.main_image.url), post %>
           <div class="card-block">
             <h4 class="card-title"><%= link_to post.title, post_path(post) %></h6></h4>
             <p class="card-text"><%= truncate(post.description, length: 50) %></p>
