--- a/app/views/posts/my.html.erb
+++ b/app/views/posts/my.html.erb
@@ -4,7 +4,7 @@
 <% @posts.each do |post| %>
  <div class="col-md-4"> 
   <div class="card">
-  <%= link_to (image_tag post.main_image_url), post %>
+  <%= link_to (image_tag post.main_image.url), post %>
     <div class="card-block">
       <h4 class="card-title"><%= link_to post.title, post_path(post) %> </h6></h4>
       <p class="card-text"><%= truncate(post.description, length: 50) %></p>
