--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,28 +1,65 @@
 <div class="container detail-page p-b-3">
   <div class="row">
 
-    <div class="col-lg-4 col-lg-push-0 col-md-6 col-md-push-6">
-      <%= image_tag @post.main_image.url, class: "img-responsive m-b-1", style: 'width: 100%' %>
+    <!-- sharing -->
+    <div class="sharing col-md-1 col-lg-1">
+      <div class="addthis_sharing_toolbox"></div>
     </div>
 
-    <div class="col-lg-5 col-lg-pull-0 col-md-6 col-md-pull-6">
-      <div>
-        <h3><%= @post.title %></h3>
-        <h6 class="location">
+    <!-- content -->
+    <div class="post-content col-md-8 col-lg-8">
+      <h2><%= @post.title %></h2>
+      <h6 class="text-uppercase">
+        <%= @post.created_at.strftime("%b %d, %Y") %>
+        <%= fa_icon "circle" %>
+        by <%= @post.user.name %>
+        <%= fa_icon "circle" %>
+        5 requests
+      </h6>
+      <%= image_tag @post.main_image.url, class: "img-responsive", style: 'width: 100%' %>
+      <p class="extended-description">
+        <%= @post.description %>
+      </p>
+    </div>
+
+    <!-- tool bar -->
+    <div class="toolbar col-md-3 col-lg-3">
+      <ul class="list-group more-info">
+        <li class="list-group-item">
           <%= fa_icon "map-marker" %>
           <%= location_name(@post.location) %>
-        </h6>
+        </li>
+        <li class="list-group-item">
+          <div class="<%= @post.status %>">
+            <% if @post.published? %>
+              <%= fa_icon "check" %>
+              <%= t("posts.status.published") %>
+            <% elsif @post.closed %>
+              <%= fa_icon "times" %>
+              <%= t("posts.status.closed") %>
+            <% else %>
+              <%= fa_icon "ban" %>
+              <%= t("posts.status.drafted") %>
+            <% end %>
+          </div>
+        </li>
+      </ul>
 
-        <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        <div class="addthis_sharing_toolbox"></div>
-
-        <div class="extended-description p-t-1 p-b-1">
-          <%= @post.description %>
-        </div>
-      </div>
+      <% if current_user == nil || @post.user.id != current_user.id %>
+        <button class="btn btn-primary btn-block"><%= t(".request_now") %></button>
+        <button class="btn btn-info btn-block"><%= t(".send_message") %></button>
+      <% elsif @post.user.id == current_user.id %>
+        <ul class="list-group">
+          <li class="list-group-item">Cras justo odio</li>
+          <li class="list-group-item">Dapibus ac facilisis in</li>
+          <li class="list-group-item">Morbi leo risus</li>
+          <li class="list-group-item">Porta ac consectetur ac</li>
+          <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
+      <% end %>
     </div>
 
-    <div class="col-lg-3 col-lg-offset-0 col-md-6">
+    <div class="col-lg-3 col-lg-offset-0 col-md-6" style="display:none">
       <%= form_tag(request_post_post_path(@post), method: 'post') %>
         <fieldset class="form-group">
           <input type="text" class="form-control" name="request[name]" placeholder="Tên của bạn">
